11/21 오늘은 pandas의 Series와 DataFrame에 대해서 배웠다. pandas는 보통 import pandas as pd로 해서 pd로 많이 사용한다.
09:00~
lab5 풀이

09:40~
책으로 수업

exam4.ipynb
판다스(pandas)의 Series와 DataFrame에 대해 설명

13:30~15:30
lab6.ipynb

15:30~16:40
책 55pg까지

16:40~17:50
lab7.ipynb

--- a/DATAexam/lab5.ipynb
+++ b/DATAexam/lab5.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "id": "2f088b67-cc60-4370-ba31-5e08d2848c59",
    "metadata": {},
    "outputs": [
@@ -18,63 +18,355 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8\n",
-      "1500\n"
+      "1페이지 스크래핑\n",
+      "1 페이지 제품 개수: 8\n",
+      "1500\n",
+      "푸르밀)웰치사과에이드250ML, 1,500원\n",
+      "1500\n",
+      "푸르밀)웰치포도에이드250ML, 1,500원\n",
+      "15900\n",
+      "하겐)녹차파인트, 15,900원\n",
+      "15900\n",
+      "하겐)딸기파인트, 15,900원\n",
+      "15900\n",
+      "하겐)레드벨벳치즈케이크파인트, 15,900원\n",
+      "15900\n",
+      "하겐)마카다미아파인트, 15,900원\n",
+      "15900\n",
+      "하겐)바닐라라즈베리파인트, 15,900원\n",
+      "15900\n",
+      "하겐)바닐라밀크티파인트, 15,900원\n",
+      "------------------------------------------------\n",
+      "2페이지 스크래핑\n",
+      "2 페이지 제품 개수: 8\n",
+      "15900\n",
+      "하겐)바닐라파인트, 15,900원\n",
+      "15900\n",
+      "하겐)벨지안초콜릿&헤이즐넛파인, 15,900원\n",
+      "15900\n",
+      "하겐)쵸코렛파인트, 15,900원\n",
+      "15900\n",
+      "하겐)쿠키앤크림파인트, 15,900원\n",
+      "15900\n",
+      "하겐)트위스트초코딸기파인트, 15,900원\n",
+      "15900\n",
+      "하겐)트위스트초코바닐라파인트, 15,900원\n",
+      "1000\n",
+      "오뚜기)육개장(소컵), 1,000원\n",
+      "1500\n",
+      "그대로쫀득고구마스틱(20G), 1,500원\n",
+      "------------------------------------------------\n",
+      "3페이지 스크래핑\n",
+      "3 페이지 제품 개수: 8\n",
+      "3000\n",
+      "더스윗)틱톡젤리딸기3000, 3,000원\n",
+      "3000\n",
+      "더스윗)틱톡젤리포도3000, 3,000원\n",
+      "1800\n",
+      "피니)라즈앤드블랙베리85G, 1,800원\n",
+      "1800\n",
+      "피니)젤리빈90G, 1,800원\n",
+      "1800\n",
+      "피니)젤리웜즈100G, 1,800원\n",
+      "1800\n",
+      "피니)콜라보틀젤리100G, 1,800원\n",
+      "1800\n",
+      "피니)크로커다일젤리100G, 1,800원\n",
+      "1800\n",
+      "피니)피지웜즈100G, 1,800원\n",
+      "------------------------------------------------\n",
+      "4페이지 스크래핑\n",
+      "4 페이지 제품 개수: 8\n",
+      "1800\n",
+      "피니)해피믹스90G, 1,800원\n",
+      "1800\n",
+      "피니)해피사우워믹스90G, 1,800원\n",
+      "600\n",
+      "마즈)스니커즈미니20G, 600원\n",
+      "3900\n",
+      "거산)당근꿀맛고구마60G(봉), 3,900원\n",
+      "3900\n",
+      "거산)찰진꿀맛고구마60G(봉), 3,900원\n",
+      "3900\n",
+      "거산)호박꿀맛고구마60G(봉), 3,900원\n",
+      "2800\n",
+      "거산)꿀머군고구마(120G/봉), 2,800원\n",
+      "4500\n",
+      "돌)건망고(80G/봉), 4,500원\n",
+      "------------------------------------------------\n",
+      "5페이지 스크래핑\n",
+      "5 페이지 제품 개수: 8\n",
+      "2900\n",
+      "돌)감귤컵198G, 2,900원\n",
+      "2900\n",
+      "돌)망고컵198G, 2,900원\n",
+      "2900\n",
+      "돌)복숭아컵198G, 2,900원\n",
+      "2900\n",
+      "돌)파인애플컵198G, 2,900원\n",
+      "5900\n",
+      "TDF)조카스타웨이퍼롤메이플400G, 5,900원\n",
+      "5900\n",
+      "TDF)조카스타웨이퍼롤애플파이, 5,900원\n",
+      "1500\n",
+      "흥선)임실치즈갈릭크래커60G, 1,500원\n",
+      "2000\n",
+      "유어스(P)슈퍼말차워터500ML, 2,000원\n",
+      "------------------------------------------------\n",
+      "6페이지 스크래핑\n",
+      "6 페이지 제품 개수: 8\n",
+      "1600\n",
+      "웅진)꿀홍삼PET280ML, 1,600원\n",
+      "1600\n",
+      "웅진)내사랑유자CPET280ML, 1,600원\n",
+      "1400\n",
+      "웅진)꿀먹은헛개180ML병, 1,400원\n",
+      "1400\n",
+      "웅진)꿀홍삼180ML병, 1,400원\n",
+      "1500\n",
+      "동아)데자와밀크티캔240ML, 1,500원\n",
+      "1800\n",
+      "썬키스트)모과생강280ML, 1,800원\n",
+      "1800\n",
+      "해태)썬키스트허니유자280ML, 1,800원\n",
+      "1200\n",
+      "조지아)맥스커피240ML, 1,200원\n",
+      "------------------------------------------------\n",
+      "7페이지 스크래핑\n",
+      "7 페이지 제품 개수: 8\n",
+      "1200\n",
+      "조지아)카페라떼240ML, 1,200원\n",
+      "2200\n",
+      "팜트리)궁중발효홍삼100ML, 2,200원\n",
+      "2200\n",
+      "칸타타)아메리카노275ML(NB캔), 2,200원\n",
+      "2200\n",
+      "칸타타)콜드브루블랙275ML(NB캔), 2,200원\n",
+      "2200\n",
+      "칸타타)프리미엄라떼275ML(NB캔), 2,200원\n",
+      "1200\n",
+      "레쓰비)카페타임라떼240ML, 1,200원\n",
+      "1200\n",
+      "레쓰비)카페타임헤이즐넛240ML, 1,200원\n",
+      "1500\n",
+      "흥선)떡볶이스낵김치컵라면맛, 1,500원\n",
+      "------------------------------------------------\n",
+      "8페이지 스크래핑\n",
+      "8 페이지 제품 개수: 8\n",
+      "1500\n",
+      "흥선)빼바프로틴레드27G, 1,500원\n",
+      "8900\n",
+      "오징어물회330G(냉동), 8,900원\n",
+      "3800\n",
+      "납딱한오다리25G, 3,800원\n",
+      "3800\n",
+      "대구노가리30G, 3,800원\n",
+      "3800\n",
+      "도톰한오징어25G, 3,800원\n",
+      "1400\n",
+      "켈로그)베리앤넛에너지바1400, 1,400원\n",
+      "1200\n",
+      "켈로그)첵스초코오리지널, 1,200원\n",
+      "1800\n",
+      "켈)프로틴그래놀라바고소한맛35G, 1,800원\n",
+      "------------------------------------------------\n",
+      "9페이지 스크래핑\n",
+      "9 페이지 제품 개수: 8\n",
+      "1800\n",
+      "켈)프로틴그래놀라바사과맛30G, 1,800원\n",
+      "3700\n",
+      "프링글스)매콤한맛(대), 3,700원\n",
+      "3700\n",
+      "프링글스)양파맛(대), 3,700원\n",
+      "3700\n",
+      "프링글스)오리지날(대), 3,700원\n",
+      "3700\n",
+      "프링글스)치즈맛(대), 3,700원\n",
+      "3700\n",
+      "프링글스슈퍼핫갈릭새우맛110G, 3,700원\n",
+      "2300\n",
+      "Y(P)다운타우너치폴레소세지80G, 2,300원\n",
+      "2300\n",
+      "Y(P)다운타우너트러플소세지80G, 2,300원\n",
+      "------------------------------------------------\n",
+      "10페이지 스크래핑\n",
+      "10 페이지 제품 개수: 8\n",
+      "5500\n",
+      "쫄깃한한입문어70G(냉장), 5,500원\n",
+      "1500\n",
+      "맥널티)스테비아커피믹스원컵, 1,500원\n",
+      "1800\n",
+      "맥널티)스테비아제로슈가핫초코, 1,800원\n",
+      "7000\n",
+      "팔도)비빔장스틱형(10입), 7,000원\n",
+      "1800\n",
+      "허쉬)머쉬멜로핫초코원컵30G, 1,800원\n",
+      "1800\n",
+      "허쉬)민트핫초코원컵30G, 1,800원\n",
+      "7500\n",
+      "티젠)핫콤부차(진저레몬)10입, 7,500원\n",
+      "3000\n",
+      "머거본)볶음땅콩100G, 3,000원\n",
+      "------------------------------------------------\n",
+      "스크래핑 종료\n"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'content'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [38], line 35\u001b[0m\n\u001b[0;32m     31\u001b[0m     prices[i]\u001b[38;5;241m=\u001b[39m re\u001b[38;5;241m.\u001b[39msub(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m[,원]\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m, prices[i]\u001b[38;5;241m.\u001b[39mtext)\n\u001b[0;32m     32\u001b[0m     \u001b[38;5;66;03m#prices[i] = prices[i].text.replace(',', '')\u001b[39;00m\n\u001b[0;32m     33\u001b[0m     \u001b[38;5;66;03m#prices[i] = prices[i].text.replace('원', '')\u001b[39;00m\n\u001b[1;32m---> 35\u001b[0m     \u001b[38;5;28mprint\u001b[39m(names[i]\u001b[38;5;241m.\u001b[39mtext, \u001b[43mprices\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcontent\u001b[49m, sep\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m\"\u001b[39m, end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;66;03m#한 페이지에 원래 50~60개씩 보여주는데 10개만 출력된다. 실제로 웹페이지에서 스크롤바를 내려보면 스크롤바의 크기가 줄어들면서 더 나온다. #스타벅스 홈페이지에서 3개만 있다가 스크롤바를 내리면 더 나왔던것과 같다. 즉 스크롤바 처리를 해줘야 한다.\u001b[39;00m\n\u001b[0;32m     36\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m------------------------------------------------\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     37\u001b[0m \u001b[38;5;66;03m#linkurl = '#app-root > div > div.XUrfU > div.zRM9F > a:nth-child(7)' #다음페이지로 옮겨가는 '>버튼'의 css선택자.\u001b[39;00m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'content'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>상품명</th>\n",
+       "      <th>가격</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>푸르밀)웰치사과에이드250ML</td>\n",
+       "      <td>1500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>푸르밀)웰치포도에이드250ML</td>\n",
+       "      <td>1500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>하겐)녹차파인트</td>\n",
+       "      <td>15900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>하겐)딸기파인트</td>\n",
+       "      <td>15900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>하겐)레드벨벳치즈케이크파인트</td>\n",
+       "      <td>15900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>팔도)비빔장스틱형(10입)</td>\n",
+       "      <td>7000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>허쉬)머쉬멜로핫초코원컵30G</td>\n",
+       "      <td>1800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>허쉬)민트핫초코원컵30G</td>\n",
+       "      <td>1800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>티젠)핫콤부차(진저레몬)10입</td>\n",
+       "      <td>7500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>머거본)볶음땅콩100G</td>\n",
+       "      <td>3000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>80 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 상품명     가격\n",
+       "0   푸르밀)웰치사과에이드250ML   1500\n",
+       "1   푸르밀)웰치포도에이드250ML   1500\n",
+       "2           하겐)녹차파인트  15900\n",
+       "3           하겐)딸기파인트  15900\n",
+       "4    하겐)레드벨벳치즈케이크파인트  15900\n",
+       "..               ...    ...\n",
+       "75    팔도)비빔장스틱형(10입)   7000\n",
+       "76   허쉬)머쉬멜로핫초코원컵30G   1800\n",
+       "77     허쉬)민트핫초코원컵30G   1800\n",
+       "78  티젠)핫콤부차(진저레몬)10입   7500\n",
+       "79      머거본)볶음땅콩100G   3000\n",
+       "\n",
+       "[80 rows x 2 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "#소스1\n",
     "from selenium import webdriver\n",
-    "from selenium.webdriver.common.keys import Keys \n",
+    "#from selenium.webdriver.common.keys import Keys \n",
     "from selenium.webdriver.chrome.service import Service\n",
     "from selenium.webdriver.common.by import By\n",
-    "import time\n",
-    "import re\n",
+    "import time #time.sleep(숫자)\n",
+    "import re #regular expression. 정규표현식 사용시 필요한 API\n",
+    "\n",
+    "import pandas as pd\n",
     "\n",
     "goodsname = list()\n",
     "goodsprice = list()\n",
     "\n",
-    "driver = webdriver.Chrome(service=Service('C:/Temp/chromedriver'))\n",
-    "driver.implicitly_wait(3) \n",
+    "driver = webdriver.Chrome(service=Service('C:/Temp/chromedriver')) #셀레니움에 의해 제어되는 크롬브라우저 구동시키면서 웹브라우저 객체 생성\n",
+    "driver.implicitly_wait(3) #요청하고 응답을 받아올때 내부적으로 3초정도까지는 대기할 수 있다는 설정(한 번 설정하면 끝?)\n",
     "driver.get('http://gs25.gsretail.com/gscvs/ko/products/event-goods') \n",
-    "time.sleep(2)\n",
+    "time.sleep(2) #사이트로 가고나서 렌더링할 시간을 줌.\n",
     "\n",
     "byLinkText = driver.find_element(By.LINK_TEXT,'2+1 행사') #하이퍼링크 텍스트(컨텐트)가 정확히 '2+1 행사'인 것을 찾는다.\n",
-    "byLinkText.click()\n",
+    "byLinkText.click() #하이퍼링크 클릭\n",
     "\n",
-    "for i in range(1, 10) : #1이상 10미만(9번 반복)\n",
+    "for i in range(10) : #1이상 10미만(9번 반복)\n",
+    "    print(f\"{i+1}페이지 스크래핑\")\n",
     "    names = driver.find_elements(By.CSS_SELECTOR, \"#contents > div.cnt > div.cnt_section.mt50 > div > div > div:nth-child(5) > ul > li > div > p.tit\") #상품명\n",
     "    prices = driver.find_elements(By.CSS_SELECTOR, \"#contents > div.cnt > div.cnt_section.mt50 > div > div > div:nth-child(5) > ul > li > div > p.price > span\") #가격\n",
-    "    print(len(names))\n",
+    "    print(i+1,\"페이지 제품 개수:\",len(names))\n",
     "    if len(names) == 0 :\n",
     "        print(\"추출되는 상품이 더 이상 없다.\")\n",
     "        break #while True로 된 무한루프 종료\n",
     "    #for name in names :\n",
     "        #print(name.tag_name, \":\", name.text)\n",
-    "    for i in range(len(names)) : #한 페이지에서 추출된 개수만큼 반복하여 화면에 내보낸다.\n",
-    "        print(re.sub(\"[,원]\", '', prices[i].text)) #이건 exam1.ipynb 참고해야 한다.\n",
-    "        prices[i]= re.sub(\"[,원]\", '', prices[i].text)\n",
-    "        #prices[i] = prices[i].text.replace(',', '')\n",
-    "        #prices[i] = prices[i].text.replace('원', '')\n",
+    "    for j in range(len(names)) : #한 페이지에서 추출된 개수만큼 반복하여 화면에 내보낸다.\n",
+    "        print(re.sub(\"[,원]\", '', prices[j].text)) #이건 exam1.ipynb 참고해야 한다.\n",
+    "        #prices[i]= re.sub(\"[,원]\", '', prices[j].text) #헤맸던 흔적\n",
+    "        #prices[i] = prices[i].text.replace(',', '')    #헤맸던 흔적\n",
+    "        #prices[i] = prices[i].text.replace('원', '')   #헤맸던 흔적\n",
     "        \n",
-    "        print(names[i].text, prices[i].text, sep=\", \", end=\"\\n\") #한 페이지에 원래 50~60개씩 보여주는데 10개만 출력된다. 실제로 웹페이지에서 스크롤바를 내려보면 스크롤바의 크기가 줄어들면서 더 나온다. #스타벅스 홈페이지에서 3개만 있다가 스크롤바를 내리면 더 나왔던것과 같다. 즉 스크롤바 처리를 해줘야 한다.\n",
+    "        temp_price= re.sub(\"[,원]\", '', prices[j].text) #기존 prices를 바꾸는 게 아니라 새로 임시 변수를 만듦.\n",
+    "        goodsname.append(names[j].text)\n",
+    "        goodsprice.append(temp_price)\n",
+    "                \n",
+    "        print(names[j].text, prices[j].text, sep=\", \", end=\"\\n\") #한 페이지에 원래 50~60개씩 보여주는데 10개만 출력된다. 실제로 웹페이지에서 스크롤바를 내려보면 스크롤바의 크기가 줄어들면서 더 나온다. #스타벅스 홈페이지에서 3개만 있다가 스크롤바를 내리면 더 나왔던것과 같다. 즉 스크롤바 처리를 해줘야 한다.\n",
     "    print(\"------------------------------------------------\")\n",
-    "    #linkurl = '#app-root > div > div.XUrfU > div.zRM9F > a:nth-child(7)' #다음페이지로 옮겨가는 '>버튼'의 css선택자.\n",
+    "    #linkurl = '#app-root > div > div.XUrfU > div.zRM9F > a:nth-child(7)' #다음페이지로 옮겨가는 '>버튼'의 css선택자. #헤맸던 흔적\n",
     "    try :\n",
-    "        #linkNum = driver.find_element(By.CSS_SELECTOR, linkurl)\n",
-    "        nextBtn = driver.find_element(By.CSS_SELECTOR, \"#contents > div.cnt > div.cnt_section.mt50 > div > div > div:nth-child(5) > div > a.next\")\n",
+    "        #linkNum = driver.find_element(By.CSS_SELECTOR, linkurl) #헤맸던 흔적\n",
+    "        #nextBtn = driver.find_element(By.CSS_SELECTOR, \"#contents > div.cnt > div.cnt_section.mt50 > div > div > div:nth-child(5) > div > a.next\") #헤맸던 흔적\n",
+    "        nextBtn = driver.find_element(By.LINK_TEXT, \"다음 페이지로 이동\")\n",
     "    except : #맨 끝페이지까지 가면 꺽새괄호버튼(다음페이지로 가는 버튼)이 사라지니까 무한반복문을 종료시킴\n",
     "        print(\"더 이상 다음 페이지 없음\")\n",
     "        break\n",
@@ -83,9 +375,12 @@
     "print(\"스크래핑 종료\")\n",
     "#driver.quit() #브라우저 창을 닫는다.\n",
     "\n",
-    "#매 페이지마다 추출한 엘리먼트들 리스트에 저장하고\n",
-    "#이제 가격에서 쉼표랑 '원' 때네고\n",
-    "#csv 파일로 저장(선택임)하면 된다."
+    "\n",
+    "# csv 파일로 저장\n",
+    "goods_dict = {\"상품명\":goodsname, \"가격\":goodsprice} #딕셔너리\n",
+    "df = pd.DataFrame(goods_dict) #pd는 pandas #딕셔너리를 데이터프레임 형식으로 저장(pandas api)\n",
+    "display(df) #만든 데잉터프레임을 보여준다.\n",
+    "df.to_csv(\"output/gs25_twotoone.csv\", index=False) #데이터프레임을 csv 파일로 저장한다."
    ]
   },
   {
