--- a/DATAexam/사잇킷런프레임워크/3_사이킷런의 내장 예제 데이터.ipynb
+++ b/DATAexam/사잇킷런프레임워크/3_사이킷런의 내장 예제 데이터.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# 12-01 09:50~"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 사이킷런 내장 예제 데이터"
@@ -50,13 +59,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 사이킷런의 내장 데이터 세트 형태\n",
+    "### 사이킷런의 내장 데이터 세트 형태(딕셔너리로 되어있음)\n",
     "\n",
     "key 구성\n",
     "- data, target, target_names, feature_names, DESCR\n",
     "\n",
     "data : 피처 데이터 세트 (ndarry)  \n",
-    "target : 분류(레이블 값)/회귀(숫자 결과값 데이터 세트) (ndarry)  \n",
+    "target : 분류(레이블 값)/회귀(숫자 결과값 데이터 세트) (ndarry)  (data와 target을 가지고 진행을 하게 된다.)\n",
     "target_names : 개별 레이블 이름 (ndarry 또는 list)  \n",
     "feature_names : 피처 이름 (ndarry 또는 list)  \n",
     "DESCR : 데이터 세트 설명, 각 피처 설명 (string)\n"
@@ -143,9 +152,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
