--- a/DATAexam/사잇킷런프레임워크/5_데이터_전처리.ipynb
+++ b/DATAexam/사잇킷런프레임워크/5_데이터_전처리.ipynb
@@ -123,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**사이킷런의 레이블 인코딩 클래스 : LabelEncoder**\n",
+    "**사이킷런의 레이블 인코딩 클래스 : LabelEncoder(위에 사진에서 상품분류 열의 데이터를 숫자로 바꿔준다.)**\n",
     "1. LabelEncoder 객체 생성\n",
     "2. fit() 메서드\n",
     "    - 레이블 인코더를 맞춤\n",
@@ -139,15 +139,26 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 1 4 5 3 3 2 2]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([0, 1, 4, 5, 3, 3, 2, 2])"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.preprocessing import LabelEncoder\n"
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "item = ['TV', '냉장고', '전자렌지', '컴퓨터', '선풍기', '선풍기', '믹서', '믹서']\n",
+    "\n",
+    "#LabelEncoder 객체 생성한 후\n",
+    "#fit(), transform()을 인코딩 수행\n",
+    "encoder = LabelEncoder()\n",
+    "encoder.fit(item) # 각 범주별 label을 만들어낸다.\n",
+    "labels = encoder.transform(item) #영문 알파벳 먼저, 그 다음에 한글자음 ㄱㄴㄷ 순으로\n",
+    "labels"
    ]
   },
   {
@@ -175,7 +186,7 @@
    ],
    "source": [
     "# 인코딩 전 원래의 값 확인 : encoder.classes_ 속성\n",
-    "print('인코딩 클래스:',encoder.classes_)"
+    "print('인코딩 클래스:',encoder.classes_) #실제 타입은 dtype='<U4'라고 되어있다. 부호가 없는 32bit 정수를 의미한다. 마이너스가 없는 정수형이라는 말이다. U4는 32bit짜리 정수에 해당된다는 말이다."
    ]
   },
   {
@@ -187,22 +198,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['선풍기', 'TV', '믹서', '냉장고'], dtype='<U4')"
+       "array(['TV', '냉장고', '전자렌지', '컴퓨터', '선풍기', '선풍기', '믹서', '믹서'], dtype='<U4')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 인코딩된 값 디코딩\n"
+    "# 인코딩된 값 (원래 값으로)디코딩\n",
+    "encoder.inverse_transform(labels)"
    ]
   },
   {
@@ -216,7 +228,7 @@
     "- 숫자 값의 크기 특성이 작용하기 때문\n",
     "- 즉, 냉장고가 1, 믹서가 2로 변환되면서 1 보다 2가 더 큰 값이므로 가중치가 부여되거나\n",
     "- 더 중요하게 인식될 가능성 발생\n",
-    "- 이러한 특성 때문에 레이블 인코딩은 선형 회귀와 같은 ML 알고리즘에서는 적용하지 않음\n",
+    "- 이러한 특성 때문에 레이블 인코딩은 <span style=\"color:blue\">선형 회귀와 같은 ML 알고리즘에서는 적용하지 <span style=\"color:red\">않</span>음</span>\n",
     "- 트리 계열의 ML 알고리즘은 숫자의 이러한 특성을 반영하지 않으므로 레이블 인코딩 적용 시 문제 없음\n"
    ]
   },
@@ -232,7 +244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 원-핫 인코딩(One-Hot encoding)\n",
+    "### (사이킷런의)원-핫 인코딩(One-Hot encoding)(판다스의 겟더미스와 동일하다)\n",
     "\n",
     "- feature 값의 유형에 따라 새로운 feature를 추가하여\n",
     "- 고유 값에 해당하는 컬럼만 1을 표시하고 나머지 컬럼에는 0을 표시\n",
@@ -255,12 +267,13 @@
     "2. 입력 값을 2차원 데이터로 변환\n",
     "3. OneHotEncoder 클래스로 원-핫 인코딩 적용\n",
     "    - fit()\n",
-    "    - transform()"
+    "    - transform()\n",
+    "- 반환 값은 ndarray 형태로 반환"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +282,7 @@
        "array([0, 1, 4, 5, 3, 3, 2, 2])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +292,11 @@
     "import numpy as np\n",
     "\n",
     "items=['TV','냉장고','전자렌지','컴퓨터','선풍기','선풍기','믹서','믹서']\n",
-    "\n"
+    "\n",
+    "encoder = LabelEncoder()\n",
+    "encoder.fit(items) # 각 범주별 label을 만들어낸다.\n",
+    "labels = encoder.transform(items) #영문 알파벳 먼저, 그 다음에 한글자음 ㄱㄴㄷ 순으로\n",
+    "labels"
    ]
   },
   {
@@ -306,14 +323,15 @@
     }
    ],
    "source": [
-    "# 2. 2차원 데이터로 변환\n",
-    "\n",
+    "# 2. 2차원 데이터로 변환 : reshape(-1, 1) => -1은 행이나 열 수를 알아서 지정\n",
+    "labels = labels.reshape(-1, 1) #행은 알아서 결정, 열은 1개만 만들도록 설정\n",
+    "labels\n",
     "\n",
     "# 총 데이터 수 : 8\n",
     "# 2차원 형태로 컬럼이 한 개, 행이 8개인 ndarray로 변환\n",
     "\n",
     "# reshape()에서 -1 인자 : 자동 생성의 의미\n",
-    "# 10개의 데이터 : reshape(-1, 5)  \n",
+    "# 10개의 데이터 : reshape(-1, 5)  #-1은 자동 지정하라는 의미\n",
     "# - 컬럼 수 : 5 (고정)\n",
     "# - 10개 데이터에서 컬럼이 5개로 고정되어 있으므로\n",
     "# - 행의 수는 2\n",
@@ -327,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -337,13 +355,17 @@
        "\twith 8 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 3. 원-핫 인코딩을 적용 \n"
+    "# 3. 원-핫 인코딩을 적용 \n",
+    "one_encoder = OneHotEncoder()\n",
+    "one_encoder.fit(labels)\n",
+    "one_labels = one_encoder.transform(labels)\n",
+    "one_labels"
    ]
   },
   {
@@ -355,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +395,11 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(one_labels) #(0,0) 1.0은 0행0열에 1이 들어있다는 뜻\n",
+    "# 1의 위치값을 저장\n",
+    "# (2,4) : 2행4열에 1이 저장되어 있음"
+   ]
   },
   {
    "cell_type": "code",
@@ -381,25 +407,23 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[1., 0., 0., 0., 0., 0.],\n",
-       "       [0., 1., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 1., 0.],\n",
-       "       [0., 0., 0., 0., 0., 1.],\n",
-       "       [0., 0., 0., 1., 0., 0.],\n",
-       "       [0., 0., 0., 1., 0., 0.],\n",
-       "       [0., 0., 1., 0., 0., 0.],\n",
-       "       [0., 0., 1., 0., 0., 0.]])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0. 0. 1.]\n",
+      " [0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0.]]\n"
+     ]
     }
    ],
    "source": [
-    "# 2차원 형태로 출력\n"
+    "# 2차원 형태로 출력 #위에서 왜 저렇게 되어있냐하면 아래 출력결과처럼 0이 너무 많으니까 1이 저장된 위치만 저장한 것이다.\n",
+    "print(one_labels.toarray())"
    ]
   },
   {
@@ -411,7 +435,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "원-핫 인코딩 데이터\n",
       "[[1. 0. 0. 0. 0. 0.]\n",
       " [0. 1. 0. 0. 0. 0.]\n",
       " [0. 0. 0. 0. 1. 0.]\n",
@@ -419,9 +442,7 @@
       " [0. 0. 0. 1. 0. 0.]\n",
       " [0. 0. 0. 1. 0. 0.]\n",
       " [0. 0. 1. 0. 0. 0.]\n",
-      " [0. 0. 1. 0. 0. 0.]]\n",
-      "원-핫 인코딩 데이터 차원\n",
-      "(8, 6)\n"
+      " [0. 0. 1. 0. 0. 0.]]\n"
      ]
     }
    ],
@@ -434,14 +455,20 @@
     "items=['TV','냉장고','전자렌지','컴퓨터','선풍기','선풍기','믹서','믹서']\n",
     "\n",
     "# 1. 먼저 숫자값으로 변환을 위해 LabelEncoder로 변환 \n",
-    "\n",
+    "encoder = LabelEncoder()\n",
+    "encoder.fit(items) # 각 범주별 label 생성\n",
+    "labels = encoder.transform(items)\n",
     "\n",
     "# 2. 2차원 데이터로 변환합니다. \n",
-    "\n",
+    "labels = labels.reshape(-1, 1)\n",
     "\n",
     "# 3. 원-핫 인코딩을 적용합니다. \n",
+    "one_encoder = OneHotEncoder()\n",
+    "one_encoder.fit(labels)\n",
+    "one_labels = one_encoder.transform(labels)\n",
+    "one_labels\n",
     "\n",
-    "\n"
+    "print(one_labels.toarray())"
    ]
   },
   {
@@ -455,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +558,7 @@
        "7    믹서"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -666,16 +693,18 @@
        "7        0         0        1         0          0         0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "pd.get_dummies(df)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -691,13 +720,14 @@
        "       [0, 0, 1, 0, 0, 0]], dtype=uint8)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Pandas 데이터프레임을 NumPy 배열로 변환\n"
+    "# Pandas 데이터프레임을 NumPy 배열로 변환\n",
+    "pd.get_dummies(df).to_numpy()"
    ]
   },
   {
@@ -722,7 +752,7 @@
     "        - 정규화(Normalization)\n",
     "        - sklearn.preprocessing의  StandardScaler 모듈\n",
     "\n",
-    "    - Min-max\n",
+    "    - Min-max(데이터에서 가장 큰 값과 가장 작은 값 사이를 0에서 1사이 값으로 변환)\n",
     "        -  0~1로 변환\n",
     "        - sklearn.preprocessing의  MinMaxScaler 모듈\n",
     "\n",
@@ -741,14 +771,14 @@
     "참고\n",
     "\n",
     "사전에 표준화를 적용해야 하는 알고리즘\n",
-    "- 사이킷런에서 구현하는 RBF 커널을 이용하는 서프트 벡터 머신\n",
-    "- 선형 회귀\n",
+    "- 사이킷런에서 구현하는 RBF 커널을 이용하는 서포트 벡터 머신(svm)(Support Vector Machine)(표준화를 적용해야 한다.)(분류에 해당되는 알고리즘으로 임의의 선을 기준으로 얼마나 떨어진 거리의 것들을 같은 것으로 볼 것인지 중심으로부터 거리로 정의되는 거리 커널을 사용하는 알고리즘이다.)\n",
+    "- 선형 회귀(회귀라는 단어가 들어가있으면 표준화를 적용해야 한다)\n",
     "- 로지스틱 회귀 \n",
-    "- 이들 알고리즘은 데이터가 가우시난 분포를 가지고 있다고 가정하고 구현했기 때문에\n",
-    "- 사전에 표준화 적용을 함으로써\n",
-    "- 예측 성능을 향상시킬 수 있음\n",
+    "    - 이들 알고리즘은 데이터가 가우시난 분포를 가지고 있다고 가정하고 구현했기 때문에\n",
+    "    - 사전에 표준화 적용을 함으로써\n",
+    "    - 예측 성능을 향상시킬 수 있음\n",
     "\n",
-    "Radial Basis Function (RBF) : 방사형 기저 함수\n",
+    "Radial Basis Function (RBF) : 방사형 기저 함수(RBF라는 함수를 쓰는 알고리즘들은 표준화를 쓰는 것이 좋다.)\n",
     "- 점이 중심으로부터의 거리로 정의되는 단순한 함수\n",
     "\n",
     "서포트 벡터 머신(SVM, Support Vector Machine)\n",
@@ -774,22 +804,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "feature 들의 평균 값\n",
       "sepal length (cm)    5.843333\n",
       "sepal width (cm)     3.057333\n",
       "petal length (cm)    3.758000\n",
       "petal width (cm)     1.199333\n",
       "dtype: float64\n",
-      "sepal length (cm)    0.828066\n",
-      "sepal width (cm)     0.435866\n",
-      "petal length (cm)    1.765298\n",
-      "petal width (cm)     0.762238\n",
+      "\n",
+      "feature 들의 분산 값\n",
+      "sepal length (cm)    0.685694\n",
+      "sepal width (cm)     0.189979\n",
+      "petal length (cm)    3.116278\n",
+      "petal width (cm)     0.581006\n",
       "dtype: float64\n"
      ]
     }
@@ -798,7 +831,14 @@
     "from sklearn.datasets import load_iris\n",
     "import pandas as pd\n",
     "# 붓꽃 데이터 셋을 로딩하고 DataFrame으로 변환\n",
-    "i\n"
+    "iris = load_iris()\n",
+    "iris_data = iris.data\n",
+    "iris_df = pd.DataFrame(data=iris_data, columns=iris.feature_names)\n",
+    "\n",
+    "print('feature 들의 평균 값')\n",
+    "print(iris_df.mean())\n",
+    "print('\\nfeature 들의 분산 값')\n",
+    "print(iris_df.var())"
    ]
   },
   {
@@ -814,22 +854,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "feature 들의 평균 값\n",
       "sepal length (cm)   -1.690315e-15\n",
       "sepal width (cm)    -1.842970e-15\n",
       "petal length (cm)   -1.698641e-15\n",
       "petal width (cm)    -1.409243e-15\n",
       "dtype: float64\n",
-      "sepal length (cm)    1.00335\n",
-      "sepal width (cm)     1.00335\n",
-      "petal length (cm)    1.00335\n",
-      "petal width (cm)     1.00335\n",
+      "\n",
+      "feature들의 분산 값\n",
+      "sepal length (cm)    1.006711\n",
+      "sepal width (cm)     1.006711\n",
+      "petal length (cm)    1.006711\n",
+      "petal width (cm)     1.006711\n",
       "dtype: float64\n"
      ]
     }
@@ -837,22 +882,21 @@
    "source": [
     "# StandardScaler 이용 표준화해서 변환\n",
     "\n",
-    "from sklearn.preprocessing import StandardScaler\n"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "#객체 생성\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "scaler.fit(iris_df)\n",
+    "iris_scaled = scaler.transform(iris_df) #ndarray로 반환\n",
+    "iris_df_scaled = pd.DataFrame(data=iris_scaled, columns=iris.feature_names)\n",
+    "iris_df_scaled.head()\n",
+    "\n",
+    "print('feature 들의 평균 값')\n",
+    "print(iris_df_scaled.mean())\n",
+    "print('\\nfeature들의 분산 값')\n",
+    "print(iris_df_scaled.var())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -861,7 +905,8 @@
     "MinMaxScaler\n",
     "* 데이터값을 0과 1사이의 범위 값으로 변환\n",
     "* 음수인 경우 -1에서 1사이의 값으로 변환\n",
-    "* 데이터의 분포가 가우시안 분포가 아닌 경우 Min, Max Scale 적용 가능"
+    "* 데이터의 분포가 가우시안 분포가 아닌 경우 Min, Max Scale 적용 가능\n",
+    "* 새로 들어올 데이터의 최소값과 최대값이 현재 data의 최소 최대값보다 작거나 크지않은 것이 확실할때 사용"
    ]
   },
   {
@@ -876,10 +921,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "# 객체 생성\n",
+    "scaler = MinMaxScaler()\n",
+    "\n",
+    "# 변환\n",
+    "scaler.fit(iris_df)\n",
+    "iris_scaled = scaler.transform(iris_df)\n",
+    "\n",
+    "iris_df_scaled = pd.DataFrame(data=iris_scaled, columns=iris.feature_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -899,20 +962,13 @@
     }
    ],
    "source": [
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "\n"
+    "print(iris_df_scaled.min())\n",
+    "print(iris_df_scaled.max())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1070,12 +1126,14 @@
        "       [0.44444444, 0.41666667, 0.69491525, 0.70833333]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "iris_scaled"
+   ]
   },
   {
    "cell_type": "code",
@@ -1163,9 +1221,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
