--- a/DATAexam/참고_규제_alpha.ipynb
+++ b/DATAexam/참고_규제_alpha.ipynb
@@ -30,7 +30,7 @@
     "    - $ RSS(W) + alpha*||W||_2^2$ 를 최소화하는 것으로 변경해야 함\n",
     "    - tip. ||W|| => Norm은 벡터의 길이 혹은 크기를 측정하는 방법(함수)\n",
     "        - Norm이 측정한 벡터의 크기는 원점에서 벡터 좌표까지의 거리임\n",
-    "        - 옆의 수치는 차원을 의미함. 즉 $||W||_2^2$ 는 2차원 노름\n",
+    "        - 옆의 수치는 차원을 의미함. 즉 $||W||_2^2$ 는 2차원 노름(norm)\n",
     "\n",
     "\n",
     "#### 비용 함수 목표 수식 \n",
