--- a/DATAexam/머신러닝_5_3_0_앙상블 학습_랜덤포레스트_GBM.ipynb
+++ b/DATAexam/머신러닝_5_3_0_앙상블 학습_랜덤포레스트_GBM.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "source": [
     "### 대표적인 앙상블 알고리즘\n",
-    "- 랜덤포레스트\n",
+    "- 랜덤포레스트(https://eunsukimme.github.io/ml/2019/11/26/Random-Forest/)\n",
     "- 그레디언트 부스팅(XGBoost, LightBGM)(회귀와 분류 다 사용 가능. 기반은 DecisionTree다. 의사결정 트리를 기반으로 놓고 작업을 하되, 결합하는 방식들이 약간 달라진 알고리즘이다. 논리는 DecisionTree와 똑같다.)\n",
     "\n",
     "#### 최신 앙상블 알고리즘\n",
@@ -75,7 +75,7 @@
     "배깅(Bagging) : 보팅과 동일하게 여러 분류기가 투표를 통해 최종 예측 결과를 결정하는 방식\n",
     "- 각각의 분류기가 모두 같은 유형의 알고리즘 기반이지만, \n",
     "- 샘플링을 서로 다르게 하면서 학습 수행\n",
-    "- 대표적인 배깅 방식 : 랜덤 포레스트 알고리즘"
+    "- 대표적인 배깅 방식 : <span style=\"color:red\">랜덤 포레스트 알고리즘</span>"
    ]
   },
   {
@@ -87,7 +87,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![image.png](attachment:image.png)"
+    "![image.png](attachment:image.png)\n",
+    "\n",
+    "Bagging 방식은 각각 샘플 Data를 가져와서(화살표가 아래로 되어있는데 위로 되어있다고 보면 됨) DecisionTree를 써서 예측을 한다."
    ]
   },
   {
@@ -167,7 +169,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![image.png](attachment:image.png)"
+    "![image.png](attachment:image.png)\n",
+    "\n",
+    "- Classifier은 분류기(오른쪽 그림에서는 Decision Tree 모델들)\n",
+    "- Sample data들은트레이닝 데이터 하나에서 랜덤하게 분리하는데 데이터의 개수는 같게 만든다."
    ]
   },
   {
@@ -226,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +459,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +669,7 @@
     "\n",
     "    - 모델로 결정트리 모델을 사용함\n",
     "        - 결정트리 : 쉽고 직관적인 분류 기준을 갖고있음\n",
-    "            - 단점 : 데이터를 과학게 학습 - 과적합(결정트리가 갖고있는 장점은 사용하되, 다양한 상황을 학습하게 하면 학습데이터에만 과하게 학습되어 과적합될 수 있다.)\n",
+    "            - 단점 : 데이터를 과하게 학습 - 과적합(결정트리가 갖고있는 장점은 사용하되, 다양한 상황을 학습하게 하면 학습데이터에만 과하게 학습되어 과적합될 수 있다.)\n",
     "    - 결정트리 수십개~ 수천개의 많은 분류기를 결합해 다양한 상황을 학습하게 해서 과적합의 단점을 극복하고 있음"
    ]
   },
@@ -721,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,9 +738,237 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tBodyAcc-mean()-X</th>\n",
+       "      <th>tBodyAcc-mean()-Y</th>\n",
+       "      <th>tBodyAcc-mean()-Z</th>\n",
+       "      <th>tBodyAcc-std()-X</th>\n",
+       "      <th>tBodyAcc-std()-Y</th>\n",
+       "      <th>tBodyAcc-std()-Z</th>\n",
+       "      <th>tBodyAcc-mad()-X</th>\n",
+       "      <th>tBodyAcc-mad()-Y</th>\n",
+       "      <th>tBodyAcc-mad()-Z</th>\n",
+       "      <th>tBodyAcc-max()-X</th>\n",
+       "      <th>...</th>\n",
+       "      <th>fBodyBodyGyroJerkMag-meanFreq()</th>\n",
+       "      <th>fBodyBodyGyroJerkMag-skewness()</th>\n",
+       "      <th>fBodyBodyGyroJerkMag-kurtosis()</th>\n",
+       "      <th>angle(tBodyAccMean,gravity)</th>\n",
+       "      <th>angle(tBodyAccJerkMean),gravityMean)</th>\n",
+       "      <th>angle(tBodyGyroMean,gravityMean)</th>\n",
+       "      <th>angle(tBodyGyroJerkMean,gravityMean)</th>\n",
+       "      <th>angle(X,gravityMean)</th>\n",
+       "      <th>angle(Y,gravityMean)</th>\n",
+       "      <th>angle(Z,gravityMean)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.288585</td>\n",
+       "      <td>-0.020294</td>\n",
+       "      <td>-0.132905</td>\n",
+       "      <td>-0.995279</td>\n",
+       "      <td>-0.983111</td>\n",
+       "      <td>-0.913526</td>\n",
+       "      <td>-0.995112</td>\n",
+       "      <td>-0.983185</td>\n",
+       "      <td>-0.923527</td>\n",
+       "      <td>-0.934724</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.074323</td>\n",
+       "      <td>-0.298676</td>\n",
+       "      <td>-0.710304</td>\n",
+       "      <td>-0.112754</td>\n",
+       "      <td>0.030400</td>\n",
+       "      <td>-0.464761</td>\n",
+       "      <td>-0.018446</td>\n",
+       "      <td>-0.841247</td>\n",
+       "      <td>0.179941</td>\n",
+       "      <td>-0.058627</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.278419</td>\n",
+       "      <td>-0.016411</td>\n",
+       "      <td>-0.123520</td>\n",
+       "      <td>-0.998245</td>\n",
+       "      <td>-0.975300</td>\n",
+       "      <td>-0.960322</td>\n",
+       "      <td>-0.998807</td>\n",
+       "      <td>-0.974914</td>\n",
+       "      <td>-0.957686</td>\n",
+       "      <td>-0.943068</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.158075</td>\n",
+       "      <td>-0.595051</td>\n",
+       "      <td>-0.861499</td>\n",
+       "      <td>0.053477</td>\n",
+       "      <td>-0.007435</td>\n",
+       "      <td>-0.732626</td>\n",
+       "      <td>0.703511</td>\n",
+       "      <td>-0.844788</td>\n",
+       "      <td>0.180289</td>\n",
+       "      <td>-0.054317</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.279653</td>\n",
+       "      <td>-0.019467</td>\n",
+       "      <td>-0.113462</td>\n",
+       "      <td>-0.995380</td>\n",
+       "      <td>-0.967187</td>\n",
+       "      <td>-0.978944</td>\n",
+       "      <td>-0.996520</td>\n",
+       "      <td>-0.963668</td>\n",
+       "      <td>-0.977469</td>\n",
+       "      <td>-0.938692</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.414503</td>\n",
+       "      <td>-0.390748</td>\n",
+       "      <td>-0.760104</td>\n",
+       "      <td>-0.118559</td>\n",
+       "      <td>0.177899</td>\n",
+       "      <td>0.100699</td>\n",
+       "      <td>0.808529</td>\n",
+       "      <td>-0.848933</td>\n",
+       "      <td>0.180637</td>\n",
+       "      <td>-0.049118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.279174</td>\n",
+       "      <td>-0.026201</td>\n",
+       "      <td>-0.123283</td>\n",
+       "      <td>-0.996091</td>\n",
+       "      <td>-0.983403</td>\n",
+       "      <td>-0.990675</td>\n",
+       "      <td>-0.997099</td>\n",
+       "      <td>-0.982750</td>\n",
+       "      <td>-0.989302</td>\n",
+       "      <td>-0.938692</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.404573</td>\n",
+       "      <td>-0.117290</td>\n",
+       "      <td>-0.482845</td>\n",
+       "      <td>-0.036788</td>\n",
+       "      <td>-0.012892</td>\n",
+       "      <td>0.640011</td>\n",
+       "      <td>-0.485366</td>\n",
+       "      <td>-0.848649</td>\n",
+       "      <td>0.181935</td>\n",
+       "      <td>-0.047663</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.276629</td>\n",
+       "      <td>-0.016570</td>\n",
+       "      <td>-0.115362</td>\n",
+       "      <td>-0.998139</td>\n",
+       "      <td>-0.980817</td>\n",
+       "      <td>-0.990482</td>\n",
+       "      <td>-0.998321</td>\n",
+       "      <td>-0.979672</td>\n",
+       "      <td>-0.990441</td>\n",
+       "      <td>-0.942469</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.087753</td>\n",
+       "      <td>-0.351471</td>\n",
+       "      <td>-0.699205</td>\n",
+       "      <td>0.123320</td>\n",
+       "      <td>0.122542</td>\n",
+       "      <td>0.693578</td>\n",
+       "      <td>-0.615971</td>\n",
+       "      <td>-0.847865</td>\n",
+       "      <td>0.185151</td>\n",
+       "      <td>-0.043892</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 561 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   tBodyAcc-mean()-X  tBodyAcc-mean()-Y  tBodyAcc-mean()-Z  tBodyAcc-std()-X  \\\n",
+       "0           0.288585          -0.020294          -0.132905         -0.995279   \n",
+       "1           0.278419          -0.016411          -0.123520         -0.998245   \n",
+       "2           0.279653          -0.019467          -0.113462         -0.995380   \n",
+       "3           0.279174          -0.026201          -0.123283         -0.996091   \n",
+       "4           0.276629          -0.016570          -0.115362         -0.998139   \n",
+       "\n",
+       "   tBodyAcc-std()-Y  tBodyAcc-std()-Z  tBodyAcc-mad()-X  tBodyAcc-mad()-Y  \\\n",
+       "0         -0.983111         -0.913526         -0.995112         -0.983185   \n",
+       "1         -0.975300         -0.960322         -0.998807         -0.974914   \n",
+       "2         -0.967187         -0.978944         -0.996520         -0.963668   \n",
+       "3         -0.983403         -0.990675         -0.997099         -0.982750   \n",
+       "4         -0.980817         -0.990482         -0.998321         -0.979672   \n",
+       "\n",
+       "   tBodyAcc-mad()-Z  tBodyAcc-max()-X  ...  fBodyBodyGyroJerkMag-meanFreq()  \\\n",
+       "0         -0.923527         -0.934724  ...                        -0.074323   \n",
+       "1         -0.957686         -0.943068  ...                         0.158075   \n",
+       "2         -0.977469         -0.938692  ...                         0.414503   \n",
+       "3         -0.989302         -0.938692  ...                         0.404573   \n",
+       "4         -0.990441         -0.942469  ...                         0.087753   \n",
+       "\n",
+       "   fBodyBodyGyroJerkMag-skewness()  fBodyBodyGyroJerkMag-kurtosis()  \\\n",
+       "0                        -0.298676                        -0.710304   \n",
+       "1                        -0.595051                        -0.861499   \n",
+       "2                        -0.390748                        -0.760104   \n",
+       "3                        -0.117290                        -0.482845   \n",
+       "4                        -0.351471                        -0.699205   \n",
+       "\n",
+       "   angle(tBodyAccMean,gravity)  angle(tBodyAccJerkMean),gravityMean)  \\\n",
+       "0                    -0.112754                              0.030400   \n",
+       "1                     0.053477                             -0.007435   \n",
+       "2                    -0.118559                              0.177899   \n",
+       "3                    -0.036788                             -0.012892   \n",
+       "4                     0.123320                              0.122542   \n",
+       "\n",
+       "   angle(tBodyGyroMean,gravityMean)  angle(tBodyGyroJerkMean,gravityMean)  \\\n",
+       "0                         -0.464761                             -0.018446   \n",
+       "1                         -0.732626                              0.703511   \n",
+       "2                          0.100699                              0.808529   \n",
+       "3                          0.640011                             -0.485366   \n",
+       "4                          0.693578                             -0.615971   \n",
+       "\n",
+       "   angle(X,gravityMean)  angle(Y,gravityMean)  angle(Z,gravityMean)  \n",
+       "0             -0.841247              0.179941             -0.058627  \n",
+       "1             -0.844788              0.180289             -0.054317  \n",
+       "2             -0.848933              0.180637             -0.049118  \n",
+       "3             -0.848649              0.181935             -0.047663  \n",
+       "4             -0.847865              0.185151             -0.043892  \n",
+       "\n",
+       "[5 rows x 561 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_train.head(5) #정형화 되어있는 데이터임. 컬럼의 제목이 들어가있고 단순화되어있다."
    ]
@@ -762,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +1004,7 @@
        "array([5, 4, 6, 1, 3, 2], dtype=int64)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
