--- a/DATAexam/머신러닝_03_2_0_선형회귀.ipynb
+++ b/DATAexam/머신러닝_03_2_0_선형회귀.ipynb
@@ -11,6 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 12-26 추가\n",
+    "- 회귀는 boolean이 아닌 데이터를 예측하는 것이고\n",
+    "- 분류는 0과 1 중에 하나로 예측하는 거다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 12-01 09:00~ (복습)"
    ]
   },
@@ -490,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
