--- a/DATAexam/머신러닝_04_0_0_분류모델평가지표.ipynb
+++ b/DATAexam/머신러닝_04_0_0_분류모델평가지표.ipynb
@@ -1198,6 +1198,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 12/26 프로젝트 중 알게된 것\n",
+    "- predict(X_test)는 그 데이터가 0이냐 1이냐 라벨로 결과를 주는 거고\n",
+    "- predict_proba(X_test)[:,1]는 0일 확률과 1일 확률을 줘서 둘이 합해서 1이 나오게끔 숫자를 넘겨준다. 사용법은 프로젝트의 Model Prepare_서대훈.ipynb 참고(없으면 Model Prepare.ipynb) \n",
+    "    - predict_proba()뒤에 [:,1]을 주는 이유는 0일 확률이나 1일 확률 중에 1일 확률 하나만 갖고오기 위해. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "타이타닉 생존자 데이터를 학습한 LogisticRegression 객체에서  \n",
     "predict_proba() 메서드를 수행한 뒤 반환 값 확인하고  \n",
     "predict() 메서드와 결과 비교  \n",
@@ -1276,7 +1286,7 @@
    "metadata": {},
    "source": [
     "사이킷런의 Binarizer 클래스 이용해서  \n",
-    "분류 결정 임계값을 조절하여  \n",
+    "분류 결정 <span style=\"color:red\">**임계값**</span>을 조절하여  \n",
     "정밀도와 재현율의 성능 수치를 상호 보완적으로 조정 가능"
    ]
   },
@@ -1329,6 +1339,19 @@
    "metadata": {},
    "source": [
     "## 12-05 종료"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 12-26 심장병 환자 예측 프로젝트 관련해서 임계값이 뭔가:\n",
+    "머신러닝_0_4_0 가장 마지막에 임곗값에 관련된 내용 있음.\n",
+    "- 임곗값은 0.5가 원래 값인데 0.5보다 낮추면 재현율이 올라가고 올리면 정밀도가 올라간다.\n",
+    "\n",
+    "심장병 1, 0 이렇게 나오는 게 아니라 1이 될 확률로 나온다. 0.75 이런식으로 나온다. 0.75로 나오면 0.5보다 크니까 1로 되는 거다. 만약 0.3 이렇게 나오면 0.5보다 작으니까 0 이렇게 된다. 이 값을 조정하겠다는 거다.\n",
+    " 0.5보다 높이면 심장병이 아닌 것을 더 많이 만드는 거고 0.5보다 낮추면 심장병을 많이 만드는 거다.\n",
+    "타겟데이터 예측 값을 0으로 만드냐 1로 만드냐. pred_proba를 이용하면 1이 될 확률과 0이 될 확률이 나온다. 이 확률을 가지고 분석가가 임의조정해주는 거다. 모델 안에서의 기본값은 무조건 0.5다."
    ]
   },
   {
