--- a/DATAexam/머신러닝_5_3_2_LightGBM.ipynb
+++ b/DATAexam/머신러닝_5_3_2_LightGBM.ipynb
@@ -102,7 +102,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![image.png](attachment:image.png)"
+    "![image.png](attachment:image.png)\n",
+    "\n",
+    "추가로 사용하는 하이퍼 파라미터는 max_depth와 min_child_samples를 많이 사용한다. n_estimator는 기본 파라미터에 해당이 된다.\n",
+    "정밀도는 임곗값(threshold)을 조정하는 게 좋다.\n",
+    "\n",
+    "머신러닝_0_4_0 가장 마지막에 임곗값에 관련된 내용 있음."
    ]
   },
   {
@@ -180,8 +185,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "dataset = load_breast_cancer()\n",
-    "ftr = dataset.data\n",
-    "target = dataset.target"
+    "ftr = dataset.data #독립변수\n",
+    "target = dataset.target #종속변수"
    ]
   },
   {
@@ -795,11 +800,12 @@
     "\n",
     "evals = [(X_test, y_test)]\n",
     "#학습: 조기중단 수행 가능(XGBoost와 동일함)\n",
+    "\n",
     "lgbm_wrapper.fit(X_train, y_train, \n",
-    "                 early_stopping_rounds=100,\n",
-    "                 eval_metric = 'logloss',\n",
-    "                 eval_set = evals,\n",
-    "                 verbose = True) #futere warning 뜨는데 무시해도 작동함"
+    "                 early_stopping_rounds=100, #lightGBM은 과적합 방지하기 위해 미리 학습을 종료시키는 기능이 있다. 그걸 몇 번정도까지 성능개선이 없으면 종료할 것인지 써놓는 거다.\n",
+    "                 eval_metric = 'logloss', #뭘로 성능평가 할거냐. logloss는 내부적으로 성능을 판단하는 함수다. eval_metric은 우리가 보려는 성능지표라면 logloss는 내부에서 모델이 직접 모델 성능이 어느정도 되는지 판단하기 위함이다. accuracy도 가능.\n",
+    "                 eval_set = evals,  #eval_set은 검증데이터를 나눈만큼 충분히 데이터가 있다면 데이터 변수를 넣어주면 검증을 한다.\n",
+    "                 verbose = True) #verbose는 설명 문구다. 0으로 써도 되고 1로 써도 되고 모델 성능과는 상관없다. #futere warning 뜨는데 무시해도 작동함"
    ]
   },
   {
